# raspi_to_aws_app

./: CMakeLists.txt  README.md  bassant_accessKeys.csv  bassant_credentials.csv  certificate.pem.crt  private.pem.key  public.pem.key
src/: aws.cpp
